Upgrade to net5.0

--- a/src/FluentOptionsValidator/FluentOptionsValidator/FluentOptionsValidator.csproj
+++ b/src/FluentOptionsValidator/FluentOptionsValidator/FluentOptionsValidator.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
     <Authors>Guy Van den Nieuwenhof</Authors>
     <Company>Guy Van den Nieuwenhof</Company>
     <Description>Combining FluentValidation and IValidateOptions into one</Description>
@@ -24,9 +24,15 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.4.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.11" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.11" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
