--- a/src/FluentOptionsValidator/FluentOptionsValidator.UnitTests/FluentOptionsValidator.UnitTests.csproj
+++ b/src/FluentOptionsValidator/FluentOptionsValidator.UnitTests/FluentOptionsValidator.UnitTests.csproj
@@ -1,22 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="ValidatorImplementations\FluentOptionsValidatorImplementation.cs~RF2b2b7612.TMP" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+		<PackageReference Include="FluentAssertions" Version="6.5.1" />
+		<PackageReference Include="NUnit" Version="3.13.2" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\FluentOptionsValidator\FluentOptionsValidator.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\FluentOptionsValidator\FluentOptionsValidator.csproj" />
+	</ItemGroup>
 
 </Project>
