--- a/src/FluentOptionsValidator/FluentOptionsValidator/FluentOptionsValidator.csproj
+++ b/src/FluentOptionsValidator/FluentOptionsValidator/FluentOptionsValidator.csproj
@@ -1,39 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Authors>Guy Van den Nieuwenhof</Authors>
-    <Company>Guy Van den Nieuwenhof</Company>
-    <Description>Combining FluentValidation and IValidateOptions into one</Description>
-    <PackageTags>FluentValidation, IValidateOptions</PackageTags>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageProjectUrl>https://github.com/guyvdn/FluentOptionsValidator</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/guyvdn/FluentOptionsValidator</RepositoryUrl>
-    <SignAssembly>True</SignAssembly>
-    <DelaySign>False</DelaySign>
-    <DebugType>embedded</DebugType>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0</TargetFrameworks>
+		<Authors>Guy Van den Nieuwenhof</Authors>
+		<Company>Guy Van den Nieuwenhof</Company>
+		<Description>Combining FluentValidation and IValidateOptions into one</Description>
+		<PackageTags>FluentValidation, IValidateOptions</PackageTags>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<PackageProjectUrl>https://github.com/guyvdn/FluentOptionsValidator</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/guyvdn/FluentOptionsValidator</RepositoryUrl>
+		<SignAssembly>True</SignAssembly>
+		<DelaySign>False</DelaySign>
+		<DebugType>embedded</DebugType>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile></DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DocumentationFile></DocumentationFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="9.2.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.9" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FluentValidation" Version="10.3.6" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Include="..\..\..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
 </Project>
