--- a/src/FluentOptionsValidator/FluentOptionsValidator/FluentOptionsValidator.csproj
+++ b/src/FluentOptionsValidator/FluentOptionsValidator/FluentOptionsValidator.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0</TargetFrameworks>
+		<Version>2.0.0</Version>
 		<Authors>Guy Van den Nieuwenhof</Authors>
 		<Company>Guy Van den Nieuwenhof</Company>
 		<Description>Combining FluentValidation and IValidateOptions into one</Description>
